--- a/bias_aware_credit_approval_system.ipynb
+++ b/bias_aware_credit_approval_system.ipynb
@@ -9,6 +9,30 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/chitalekunal/ai_governance/blob/main/bias_aware_credit_approval_system.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Bias-Aware Credit Approval System (EU AI Act Compliance)"
+      ],
+      "metadata": {
+        "id": "5pYPqWqrjoj2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @markdown ## 1. The \"What & Why\" <br/>\n",
+        "# @markdown I’ve been hearing a lot about how AI is getting regulated in Europe (the EU AI Act), so I wanted to see if I could actually \"break\" a credit-scoring model and then fix it. <br/>The goal here isn't just to make a model that's 99% accurate. It’s to build a model that doesn't accidentally become a jerk by discriminating against people based on their gender or age. In the EU, if your AI does that, you're in big trouble—so I’m playing \"AI Ethics Lead\" for a day to see how it works. 😁\n",
+        "# @markdown ## 2. How I know it discriminates?\n",
+        "# @markdown In Europe, the concern about AI bias isn't just a \"gut feeling\"—it's based on high-profile cases where algorithms actually failed, combined with a very specific legal philosophy about human rights. notifications of The Dutch \"Childcare Benefit\" Scandal , The \"CV Ghosting\" in Recruitment, Predictive Policing in Belgium & Italy are some of them. Well I am not targetting to solve all of them but surely this usecase can help understand how it all works and how companies can buidl a robust system around it."
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "KZPE72BXkXZ4"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
