--- a/bias_aware_credit_approval_system.ipynb
+++ b/bias_aware_credit_approval_system.ipynb
@@ -23,12 +23,19 @@
       "cell_type": "code",
       "source": [
         "# @title Step 1: The \"Lazy\" Model\n",
-        "# @markdown We will train a random forest on set of banking data. As per the understanding, the model will cheat based on the bias data."
+        "# @markdown We will train a random forest on set of banking data. As per the understanding, the model will cheat based on the bias data.\n",
+        "\n",
+        "import pandas as pd #Pandas for data analysis\n",
+        "from sklearn.ensemble import RandomForestClassifier #AI Model that we will use for the experiment\n",
+        "from sklearn.model_selection import train_test_split #Function to sample data in test data and training data\n",
+        "\n",
+        "# @markdown we will be using ```Fairlearn``` which is an open-source, community-driven project to help data scientists improve fairness of AI systems.\n",
+        "from fairlearn.metrics import MetricFrame, selection_rate, demographic_parity_difference"
       ],
       "metadata": {
         "id": "KZPE72BXkXZ4"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     }
   ],
