--- a/bias_aware_credit_approval_system.ipynb
+++ b/bias_aware_credit_approval_system.ipynb
@@ -23,6 +23,7 @@
       "cell_type": "code",
       "source": [
         "# @title Step 1: The \"Lazy\" Model\n",
+        "# @markdown #### Package import\n",
         "# @markdown We will train a random forest on set of banking data. As per the understanding, the model will cheat based on the bias data.\n",
         "\n",
         "import pandas as pd #Pandas for data analysis\n",
@@ -33,9 +34,10 @@
         "from fairlearn.metrics import MetricFrame, selection_rate, demographic_parity_difference"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "KZPE72BXkXZ4"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     }
   ],
